--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   logger: ^2.0.2+1
   flutter_polyline_points: ^2.0.0
   sliding_up_panel2: ^3.3.0+1
+  assorted_layout_widgets: ^9.0.1
+  responsive_sizer: ^3.3.1
+  google_fonts: 5.1.0
   
 
 dev_dependencies:
