--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext {
+        agp_version = '7.4.2'
+    }
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
         mavenCentral()
