--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,9 @@ dependencies:
   google_fonts: 5.1.0
   enefty_icons: ^1.0.7
   modal_bottom_sheet: ^3.0.0-pre
-  
+  animated_bottom_navigation_bar: ^1.3.3
+  image_picker: ^1.0.8
+
 
 dev_dependencies:
   flutter_test:
